IAS-58 (Some fonts are too large)

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/ResultsSummary.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/ResultsSummary.xhtml
@@ -15,7 +15,7 @@
         <ui:component>
 
             <h:panelGrid columns="2" width="100%"
-                         styleClass="intact_table"
+                         styleClass="intact_table default"
                          columnClasses="intact_summaryCol,intact_summaryCol">
                 <h:panelGroup id="searchSummary">
 
