--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/TermChooser.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/TermChooser.xhtml
@@ -24,7 +24,7 @@
                                    dialogAttr="bgColor='white' bgOpacity='0.5' toggle='fade' toggleDuration='250'"
                                    hiderIds="${id}_panelCloseButton">
 
-                        <div style="width:350px;height:400px;overflow-y:scroll;">
+                        <div class="default" style="width:350px;height:400px;overflow-y:scroll;">
 
                             <h3>Click on a Term:</h3>
 
