--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/resultstable/search_nav_buttons.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/resultstable/search_nav_buttons.xhtml
@@ -25,7 +25,7 @@
                                 pageIndexVar="pageIndex"
                                 paginator="true"
                                 paginatorMaxPages="9"
-                                paginatorTableClass="paginator"
+                                styleClass="default"
                                 paginatorActiveColumnStyle="font-weight:bold;"
                                 immediate="true">
                     <f:facet name="first">
