--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/HilightableRowElement.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/HilightableRowElement.xhtml
@@ -19,19 +19,22 @@
                           onmouseout="stopHilighting('hilight', 'span')"
                           value="#{url}" target="_blank" rendered="#{url != null}">
 
-                <span id="hilight_#{columnAlias}_#{index}_#{rowIndex}">
-                    <h:outputText value="#{text}"/>
-                    <h:outputText value=", " rendered="#{rowIndex + 1 lt rowCount}"/>
+                <span id="hilight_#{columnAlias}_#{index}_#{rowIndex}" style="display:block; ">
+                    <nobr>
+                        <h:outputText value="#{text}"/>
+                    </nobr>
                 </span>
             </h:outputLink>
 
             <h:panelGroup rendered="#{url == null}"
-                    onmouseover="hilightElements('hilight', '_#{index}_#{rowIndex}', 'span', 'red')"
-                    onmouseout="stopHilighting('hilight', 'span')">
-                <span id="hilight_#{columnAlias}_#{index}_#{rowIndex}">
-                    <h:outputText value="#{text}"/>
-                    <h:outputText value=", " rendered="#{rowIndex + 1 lt rowCount}"/>
+                          onmouseover="hilightElements('hilight', '_#{index}_#{rowIndex}', 'span', 'red')"
+                          onmouseout="stopHilighting('hilight', 'span')">
+                <span id="hilight_#{columnAlias}_#{index}_#{rowIndex}" style="display:block">
+                    <nobr>
+                        <h:outputText value="#{text}"/>
+                    </nobr>
                 </span>
+
             </h:panelGroup>
 
         </ui:component>
