- Attempt to fix error problem when loading with IE - Improved link to intact - Changed EBI bookmark icon

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/layout/template-ajaxified.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/layout/template-ajaxified.xhtml
@@ -25,7 +25,7 @@
 
                 <script type="text/javascript" src="#{requestConfigBean.absoluteContextPath}/js/intact.js"></script>
 
-                <link rel="SHORTCUT ICON" href="#{requestConfigBean.absoluteContextPath}/images/logo_intact_small.gif"/>
+                <link rel="SHORTCUT ICON" href="http://www.ebi.ac.uk/bookmark.ico" />
                 <link rel="search" href="http://www.ebi.ac.uk/intact/site/plugins/plugins/openSearch/openSearch.xml"
                       type="application/opensearchdescription+xml" title="IntAct"/>
             </ui:define>
