--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/TermChooser.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/TermChooser.xhtml
@@ -17,14 +17,10 @@
 
             <h:panelGroup>
                 <!--<t:inputText id="#{id}" value="#{term}" forceId="true"/>-->
-                <h:commandButton value="..." onclick="${id}_panel.show()" type="button"/>
+                <h:commandButton value="..." onclick="${id}_term.show()" type="button"/>
 
                 <h:panelGroup style="display:none;">
-                    <s:modalDialog dialogId="${id}_panelId" dialogVar="${id}_panel"
-                                   dialogAttr="bgColor='white' bgOpacity='0.5' toggle='fade' toggleDuration='250'"
-                                   hiderIds="${id}_panelCloseButton">
-
-                        <div class="default" style="width:350px;height:400px;overflow-y:scroll;">
+                    <ebi:modalDialog id="${id}_term" width="350px" height="400px">
 
                             <h3>Click on a Term:</h3>
 
@@ -35,17 +31,13 @@
                                     <h:panelGroup>
                                         <ui:param name="termName" value="&quot;#{term.exactSynonim == null? term.description : term.exactSynonim}&quot;"/>
                                         <h:outputText value="#{term.description}" styleClass="nodeFolder" title="#{termName}"
-                                                      onclick="document.getElementById('${forClientId}').value='${termName}'; ${id}_panel.hide()"/>
+                                                      onmouseover="this.style.cursor = 'pointer'"
+                                                      onclick="document.getElementById('${forClientId}').value='${termName}'; ${id}.hide()"/>
                                     </h:panelGroup>
                                 </f:facet>
                             </t:tree2>
 
-                        </div>
-
-                        <t:commandButton id="${id}_panelCloseButton" value="Close" forceId="true"
-                                         onclick="${id}_panel.hide()"/>
-
-                    </s:modalDialog>
+                    </ebi:modalDialog>
                 </h:panelGroup>
             </h:panelGroup>
 
