--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/webapp/layouts/styles/intact.css
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/webapp/layouts/styles/intact.css
@@ -1,8 +1,8 @@
 body {
-    margin-top: 0pt;
-    margin-left: 0pt;
-    margin-right: 0pt;
-    margin-bottom: 0pt;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
 }
 
 body, input, td, th, p {
