Fixed termChooser button

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/TermChooser.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/TermChooser.xhtml
@@ -17,7 +17,7 @@
 
             <h:panelGroup>
                 <!--<t:inputText id="#{id}" value="#{term}" forceId="true"/>-->
-                <h:commandButton value="..." onclick="${id}_term.show()" type="button"/>
+                <tr:commandButton text="..." onclick="${id}_term.show()" partialSubmit="true"/>
 
                 <h:panelGroup style="display:none;">
                     <ebi:modalDialog id="${id}_term" width="350px" height="400px">
